Towards TPCH-18 on Spark.